--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -25,7 +25,7 @@
 
             <ion-button
                 class="btn-login"
-                color="tertiary"
+                color="secondary"
                 (click)="login()"
                 type="submit"
             >
@@ -34,38 +34,3 @@
         </form>
     </div>
 </ion-content>
-
-<!-- <div text-center padding>
-    <ion-button color="tertiary" (click)="login()" type="submit">
-        <ion-label color="primary">
-            ENTER
-            <div
-                *ngIf="
-                loginForm.controls['email'].touched &&
-                loginForm.controls['email'].errors?.email
-              "
-                class="text text-danger mt-1"
-            >
-                Invalid Email
-            </div>
-            <div
-                *ngIf="
-                loginForm.controls['email'].touched &&
-                loginForm.controls['email'].errors?.required
-              "
-                class="text text-danger mt-1"
-            >
-                Email is required
-            </div>
-            <div
-                *ngIf="
-                loginForm.controls['password'].touched &&
-                loginForm.controls['password'].errors?.required
-              "
-                class="text text-danger mt-1"
-            >
-                Password is required
-            </div>
-        </ion-label>
-    </ion-button>
-</div> -->
