--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,8 +12,8 @@
             </ion-item>
             <ion-item>
                 <ion-icon slot="start" size="small" name="key-outline"></ion-icon>
-                <ion-input type="password" placeholder="Password" padding formControlName="password"></ion-input>
-                <ion-icon name="eye-off" size="small" slot="end"></ion-icon>
+                <ion-input [type]="passwordShowHide.type" placeholder="Password" padding formControlName="password"></ion-input>
+                <ion-icon (click)="showHidePassword()" [name]="passwordShowHide.showHideIcon" size="small" slot="end"></ion-icon>
             </ion-item>
 
             <ion-button class="btn-login" color="secondary" (click)="login()" type="submit">
