click to other page

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,13 +3,6 @@
         <!-- Header  -->
         <ion-header>
             <ion-row class="title">
-                <!-- <ion-col size="3">
-                    <div class="userImage">
-                        <ion-img
-                            src="https://pngimage.net/wp-content/uploads/2018/06/person-png-icon-6.png"
-                        ></ion-img>
-                    </div>
-                </ion-col> -->
                 <ion-col size="12">
                     <ion-title class="titleInKhmer" color="light">{{ user.company?.nameInKhmer }}</ion-title>
                     <ion-title color="light">{{ user.company?.name }}</ion-title>
@@ -54,7 +47,7 @@
                     <ion-row class="border-b">
                         <ion-col class="border-r" size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center" (click)="goToOtherPage()">
+                                <div class="div-btn text-center" (click)="goToPageGeneral()">
                                     <div>
                                         <ion-icon color="light" name="briefcase"></ion-icon>
                                     </div>
@@ -64,7 +57,7 @@
                         </ion-col>
                         <ion-col size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center" (click)="goToOtherPage()">
+                                <div class="div-btn text-center" (click)="goToPageObligation()">
                                     <div>
                                         <ion-icon color="light" name="list"></ion-icon>
                                     </div>
@@ -76,7 +69,7 @@
                     <ion-row>
                         <ion-col class="border-r" size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center" (click)="goToOtherPage()">
+                                <div class="div-btn text-center">
                                     <div>
                                         <ion-icon color="light" name="calculator"></ion-icon>
                                     </div>
@@ -86,9 +79,9 @@
                         </ion-col>
                         <ion-col size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center" (click)="goToOtherPage()">
+                                <div class="div-btn text-center">
                                     <div>
-                                        <ion-icon color="light" name="cash"></ion-icon>
+                                        <ion-icon color="light" name="card"></ion-icon>
                                     </div>
                                     <ion-label class="text-bold" color="light">Service</ion-label>
                                 </div>
