--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -24,6 +24,7 @@ ion-content {
 
         .second-section {
             height: 100%;
+            padding: 5% 0;
 
             ion-row {
                 height: 50%;
