--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -7,7 +7,7 @@
             name="arrow-back-outline"
         ></ion-icon>
     </ion-buttons>
-    <ion-title color="light">Oblication</ion-title>
+    <ion-title color="light">Obligation</ion-title>
 </ion-toolbar>
 </ion-header>
 
