--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-app>
-    <ion-menu contentId="main-content" side="start">
+    <ion-menu contentId="main-content" side="start" mode="md">
         <!-- Header  -->
         <ion-header>
             <ion-row class="title">
