--- a/src/app/pages/general/general.page.html
+++ b/src/app/pages/general/general.page.html
@@ -4,13 +4,13 @@
 
     <ion-tab-button tab="moc">
       <!-- <ion-icon name="home"></ion-icon> -->
-      <ion-icon name="business"></ion-icon>
-      <ion-label >MOC</ion-label>
+      <ion-icon size="large" name="business"></ion-icon>
+      <ion-label class="text-bold">MOC</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tax">
-      <ion-icon name="newspaper"></ion-icon>
-      <ion-label>GDT</ion-label>
+      <ion-icon size="large" name="newspaper"></ion-icon>
+      <ion-label class="text-bold">GDT</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
