--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -2,7 +2,7 @@
     <ion-toolbar color="primary">
         <ion-buttons
             (click)="backHome()"
-            class="ion-padding-start"
+            class="ion-margin-start"
             slot="start"
         >
             <ion-icon
