--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar color="primary">
-        <ion-buttons (click)="backHome()" class="ion-padding-start" slot="start">
+        <ion-buttons (click)="backHome()" class="ion-margin-start" slot="start">
             <ion-icon
                 size="large"
                 color="light"
