--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -31,7 +31,7 @@
     </ion-menu>
     <ion-router-outlet id="main-content" main>
         <ion-header>
-            <ion-toolbar color="primary">
+            <ion-toolbar color="primary" mode="ios">
                 <ion-buttons slot="start">
                     <ion-menu-button color="light" autoHide="false"></ion-menu-button>
                 </ion-buttons>
@@ -41,9 +41,9 @@
             </ion-toolbar>
         </ion-header>
 
-        <ion-content color="light">
+        <ion-content>
             <div class="main-section border-primary">
-                <ion-grid class="second-section" fixed>
+                <ion-grid class="second-section" fixed shadow>
                     <ion-row class="border-b">
                         <ion-col class="border-r" size="6">
                             <div class="btn-section">
