--- a/src/global.scss
+++ b/src/global.scss
@@ -68,7 +68,21 @@ ion-header {
     }
 }
 
-ion-tab-bar {
+ion-tabs {
+    --ion-background-color: var(--ion-color-body);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+
+    ion-tab-bar {
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+}
+
+ion-toolbar{
+    --min-height: 50px;
+}
+
+ion-content {
+    --ion-background-color: var(--ion-color-body);
 }
