--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -61,6 +61,8 @@
     --ion-color-light-contrast-rgb: 0, 0, 0;
     --ion-color-light-shade: #d7d8da;
     --ion-color-light-tint: #f5f6f9;
+
+    --ion-color-body: #eef4f9;
 }
 
 @font-face {
