--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -25,6 +25,7 @@ ion-content {
         .second-section {
             height: 100%;
             padding: 5% 0;
+            --box-shadow: 0 10px 10px -5px;
 
             ion-row {
                 height: 50%;
