--- a/src/global.scss
+++ b/src/global.scss
@@ -69,11 +69,8 @@ ion-header {
 }
 
 ion-tabs {
-    --ion-background-color: var(--ion-color-body);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-
     ion-tab-bar {
+        --ion-background-color: var(--ion-color-body);
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
     }
@@ -83,6 +80,6 @@ ion-toolbar{
     --min-height: 50px;
 }
 
-ion-content {
-    --ion-background-color: var(--ion-color-body);
-}
+// ion-content {
+//     --ion-background-color: var(--ion-color-body);
+// }
