yoo on model and response

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -4,8 +4,8 @@
         <ion-header>
             <ion-row class="title">
                 <ion-col size="12">
-                    <ion-title class="titleInKhmer" color="light">{{ user.company?.nameInKhmer }}</ion-title>
-                    <ion-title color="light">{{ user.company?.name }}</ion-title>
+                    <ion-title class="titleInKhmer" color="light">{{ company?.nameInKhmer }}</ion-title>
+                    <ion-title color="light">{{ company?.name }}</ion-title>
                 </ion-col>
             </ion-row>
         </ion-header>
