--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -11,78 +11,66 @@
     <div class="main-container">
         <ion-grid class="ion-no-padding">
             <ion-row>
-                <ion-col class="" size="5" class="title">
-                    <p>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</p>
-                </ion-col>
-                <ion-col size="6" class="value">
-                    <p>{{ moc.mocNumber }}</p>
-                </ion-col>
+                    <strong>ចុះបញ្ជីពាណិជ្ជកម្មលេខ :</strong>
+                    <p class="ion-margin-start">{{ moc.mocNumber }}</p>
             </ion-row>
             <ion-row>
-                <ion-col class="" size="5" class="title">
-                    <p>ចុះថ្ងៃទី :</p>
-                </ion-col>
-                <ion-col size="6" class="value">
-                    <p>{{ moment(moc.notedDate).format('DD-MM-YYYY') }}</p>
-                </ion-col>
+                    <strong>ចុះថ្ងៃទី :</strong>
+                    <p class="ion-margin-start">{{ moment(moc.notedDate).format('DD-MM-YYYY') }}</p>
             </ion-row>
             <ion-row>
-                <ion-col class="" size="5" class="title">
-                    <p>ដើមទុនចុះបញ្ជី :</p>
-                </ion-col>
-                <ion-col size="6" class="value">
-                    <p>{{ moc.capital | number }} <strong>រៀល</strong></p>
-                </ion-col>
+                    <strong>ដើមទុនចុះបញ្ជី :</strong>
+                    <p class="ion-margin-start">{{ moc.capital | number }} <strong>រៀល</strong></p>
             </ion-row>
             <ion-row>
-                <ion-col class="" size="5" class="title">
-                    <p>ប្រភេទ :</p>
-                </ion-col>
-                <ion-col size="6" class="value">
-                    <p>{{ companyTypeInKhmer[moc.companyType] }}</p>
-                </ion-col>
+                    <strong>ប្រភេទ :</strong>
+                    <p class="ion-margin-start">{{ companyTypeInKhmer[moc.companyType] }}</p>
             </ion-row>
             <ion-row>
-                <ion-col class="" size="5" class="title">
-                    <p>ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ :</p>
-                </ion-col>
-                <ion-col size="6" class="value">
-                    <p>{{ moment(moc.annualTranscriptMaintenanceDate).format('DD-MM-YYYY') }}</p>
-                </ion-col>
+                    <strong>ថ្ងៃខែតម្កល់ប្រតិវេទប្រចាំឆ្នាំ :</strong>
+                    <p class="ion-margin-start">{{ moment(moc.annualTranscriptMaintenanceDate).format('DD-MM-YYYY') }}</p>
             </ion-row>
             <ion-row>
-                <ion-col class="" size="5" class="title">
-                    <p>ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</p>
-                </ion-col>
-                <ion-col size="6" class="value">
-                    <p>{{ moc.mocUsernameLogin }}</p>
-                </ion-col>
+                    <strong>ឈ្មោះប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                    <p class="ion-margin-start">{{ moc.mocUsernameLogin }}</p>
             </ion-row>
             <ion-row>
-                <ion-col class="" size="5" class="title">
-                    <p>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</p>
-                </ion-col>
-                <ion-col size="6" class="value">
-                    <p>{{ moc.mocPasswordLogin }}</p>
-                </ion-col>
+                    <strong>លេខកូដប្រើប្រាស់ប្រព័ន្ធពាណិជ្ជកម្ម :</strong>
+                    <p class="ion-margin-start">{{ moc.mocPasswordLogin }}</p>
             </ion-row>
         </ion-grid>
         <!-- PDF section  -->
         <div class="Pdf-file">
-            <p>ឯកសារជា PDF :</p>
-            <div *ngIf="docs && docs.moc_certificate">
-                <p>1. វិញ្ញាបនប័ត្រចុះបញ្ជីពាណិជ្ជកម្ម</p>
-                <pdf-viewer
-                    (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
-                    src="{{docs.moc_certificate}}"
-                    fit-to-page="false"
-                    show-all="false"
-                    original-size="false"
-                    autoresize="false"
-                    show-borders="true"
-                    style="display: block;">
-                </pdf-viewer>
-            </div>
+            <strong>ទាញយកឯកសារជា PDF :</strong>
+            <ion-row class="ion-margin-top">
+                <div *ngIf="docs && docs.moc_certificate">
+                    <p>1.វិញ្ញាបនប័ត្រចុះបញ្ជីពាណិជ្ជកម្ម</p>
+                    <pdf-viewer
+                        src="{{docs.moc_certificate}}"
+                        [fit-to-page]="false"
+                        [show-all]="false"
+                        [original-size]="false"
+                        [autoresize]="false"
+                        [show-borders]="true"
+                        (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
+                        style="display: block;">
+                    </pdf-viewer>
+                </div>
+
+                <div class="ion-margin-start" *ngIf="docs && docs.business_extract">
+                    <p>2.សម្រង់ក្រុមហ៊ុន</p>
+                    <pdf-viewer
+                        [src]="docs.business_extract"
+                        [fit-to-page]="false"
+                        [show-all]="false"
+                        [original-size]="false"
+                        [autoresize]="false"
+                        [show-borders]="true"
+                        (click)="dowloadPDF(docs.business_extract, 'business_extract')"
+                        style="display: block;">
+                    </pdf-viewer>
+                </div>
+            </ion-row>
         </div>
     </div>
 </ion-content>
