--- a/src/app/pages/general/moc/moc.page.scss
+++ b/src/app/pages/general/moc/moc.page.scss
@@ -1,25 +1,9 @@
 ion-content {
     .main-container {
-        padding: 30px 0 0 15px;
-
-        .title {
-            p {
-                font-size: 12px;
-                margin-bottom: 19px;
-            }
-        }
-
-        .value {
-            p {
-                font-size: 14px;
-                margin-left: 10px;
-            }
-        }
+        padding: 50px 0 0 15px;
 
         .Pdf-file {
-            p {
-                font-size: 12px;
-            }
+            margin-top: 50px;
         }
     }
 }
