yoo more change on tab

--- a/src/app/pages/general/moc/moc.page.scss
+++ b/src/app/pages/general/moc/moc.page.scss
@@ -13,6 +13,10 @@ ion-content {
                 text-decoration: underline;
                 color: #3069bb;
             }
+
+            .pdf-icon {
+                font-size: 5rem;
+            }
         }
     }
 }
