--- a/src/app/pages/general/moc/moc.page.html
+++ b/src/app/pages/general/moc/moc.page.html
@@ -42,33 +42,23 @@
         <!-- PDF section  -->
         <div class="Pdf-file">
             <strong>ទាញយកឯកសារជា PDF :</strong>
-            <ion-row class="ion-margin-top">
+            <ion-row *ngIf="!isDocsFetching" class="ion-margin-top">
                 <div *ngIf="docs && docs.moc_certificate">
                     <p>1.<a (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')">វិញ្ញាបនប័ត្រចុះបញ្ជីពាណិជ្ជកម្ម</a></p>
-                    <pdf-viewer
-                        src="{{docs.moc_certificate}}"
-                        [fit-to-page]="false"
-                        [show-all]="false"
-                        [original-size]="false"
-                        [autoresize]="false"
-                        [show-borders]="true"
-                        (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
-                        style="display: block;">
-                    </pdf-viewer>
+                    <ion-icon (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
+                        color="primary" 
+                        class="pdf-icon ion-margin-start" 
+                        name="document-attach">
+                    </ion-icon>
                 </div>
 
                 <div class="ion-margin-start" *ngIf="docs && docs.business_extract">
                     <p>2.<a (click)="dowloadPDF(docs.business_extract, 'business_extract')">សម្រង់ក្រុមហ៊ុន</a></p>
-                    <pdf-viewer
-                        [src]="docs.business_extract"
-                        [fit-to-page]="false"
-                        [show-all]="false"
-                        [original-size]="false"
-                        [autoresize]="false"
-                        [show-borders]="true"
-                        (click)="dowloadPDF(docs.business_extract, 'business_extract')"
-                        style="display: block;">
-                    </pdf-viewer>
+                    <ion-icon (click)="dowloadPDF(docs.business_extract, 'business_extract')"
+                        color="primary"
+                        class="pdf-icon ion-margin-start"
+                        name="document-attach">
+                    </ion-icon>
                 </div>
             </ion-row>
         </div>
