--- a/src/app/pages/general/tax-tap/tax-tap.page.html
+++ b/src/app/pages/general/tax-tap/tax-tap.page.html
@@ -50,48 +50,49 @@
         <div class="Pdf-file">
             <strong>ទាញយកឯកសារជា PDF :</strong>
             <ion-grid>
-                <ion-row class="ion-margin-top">
-                    <div *ngIf="docs && docs.vat_certificate">
-                        <p>1.<a (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')">វិញ្ញាបនប័ត្រចុះបញ្ជីពន្ធដារ</a></p>
-                        <pdf-viewer
-                            src="{{docs.vat_certificate}}"
-                            [fit-to-page]="false"
-                            [show-all]="false"
-                            [original-size]="false"
-                            [autoresize]="false"
-                            [show-borders]="true"
-                            (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
-                            style="display: block;">
-                        </pdf-viewer>
-                    </div>
-    
-                    <div class="ion-margin-start"  *ngIf="docs && docs.patent">
-                        <p>2.<a (click)="dowloadPDF(docs.patent, 'patent')">ប័ណ្ណប៉ាតង់</a></p>
-                        <pdf-viewer
-                            [src]="docs.patent"
-                            [fit-to-page]="false"
-                            [show-all]="false"
-                            [original-size]="false"
-                            [autoresize]="false"
-                            [show-borders]="true"
-                            (click)="dowloadPDF(docs.patent, 'patent')"
-                            style="display: block;">
-                        </pdf-viewer>
-                    </div>
-    
-                    <div *ngIf="docs && docs.gdt_card">
-                        <p>3.<a (click)="dowloadPDF(docs.gdt_card, 'gdt_card')">កាតពន្ធដារ</a></p>
-                        <pdf-viewer
-                            [src]="docs.gdt_card"
-                            [fit-to-page]="false"
-                            [show-all]="false"
-                            [original-size]="false"
-                            [autoresize]="false"
-                            [show-borders]="true"
-                            (click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
-                            style="display: block;">
-                        </pdf-viewer>
-                    </div>
+                <ion-row *ngIf="!isDocsFetching" class="ion-margin-top">
+                    <ion-col size="6">
+                        <div *ngIf="docs && docs.vat_certificate">
+                            <p>1.<a (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')">វិញ្ញាបនប័ត្រចុះបញ្ជីពន្ធដារ</a></p>
+                            <ion-icon (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
+                                color="primary"
+                                class="pdf-icon"
+                                name="document-attach">
+                            </ion-icon>
+                        </div>
+                    </ion-col>
+
+                    <ion-col size="6">
+                        <div class="ion-margin-start"  *ngIf="docs && docs.patent">
+                            <p>2.<a (click)="dowloadPDF(docs.patent, 'patent')">ប័ណ្ណប៉ាតង់</a></p>
+                            <ion-icon (click)="dowloadPDF(docs.patent, 'patent')"
+                                color="primary"
+                                class="pdf-icon"
+                                name="document-attach">
+                            </ion-icon>
+                            <!-- <pdf-viewer
+                                [src]="docs.patent"
+                                [fit-to-page]="false"
+                                [show-all]="false"
+                                [original-size]="false"
+                                [autoresize]="false"
+                                [show-borders]="true"
+                                (click)="dowloadPDF(docs.patent, 'patent')"
+                                style="display: block;">
+                            </pdf-viewer> -->
+                        </div>
+                    </ion-col>
+                    
+                    <ion-col size="6">
+                        <div *ngIf="docs && docs.gdt_card">
+                            <p>3.<a (click)="dowloadPDF(docs.gdt_card, 'gdt_card')">កាតពន្ធដារ</a></p>
+                            <ion-icon (click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
+                                color="primary"
+                                class="pdf-icon"
+                                name="document-attach">
+                            </ion-icon>
+                        </div>
+                    </ion-col>
                 </ion-row>
             </ion-grid>
         </div>
