--- a/src/app/pages/general/general.page.scss
+++ b/src/app/pages/general/general.page.scss
@@ -1,5 +1,5 @@
-ion-tab-button {
-    // ion-icon {
-    //     font-size: 20px;
-    // }
-}
+// ion-tab-button {
+//     ion-icon {
+//         font-size: 20px;
+//     }
+// }
