--- a/src/app/pages/obligation/obligation.page.html
+++ b/src/app/pages/obligation/obligation.page.html
@@ -1,14 +1,10 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
-        <ion-icon
-            size="large"
-            color="light"
-            name="arrow-back-outline"
-        ></ion-icon>
-    </ion-buttons>
-    <ion-title color="light">Obligation</ion-title>
-</ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
+            <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
+        </ion-buttons>
+        <ion-title color="light">Obligation</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
