--- a/src/app/pages/home/document-inventory/document-inventory.page.html
+++ b/src/app/pages/home/document-inventory/document-inventory.page.html
@@ -25,64 +25,89 @@
 		</div>
 		<!-- PDF section  -->
         <div class="Pdf-file">
-            <strong>ទាញយកឯកសារជា PDF :</strong>
-            <ion-row class="ion-margin-top">
-				<ion-col size="7">
-					<div *ngIf="docs && docs.moc_certificate">
-						<p>1.<a (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')">វិញ្ញាបនប័ត្រចុះបញ្ជីពាណិជ្ជកម្ម</a></p>
-						<ion-icon (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
-							color="primary" 
-							class="pdf-icon" 
-							name="document-attach">
-						</ion-icon>
-					</div>
-				</ion-col>
+			<strong>ទាញយកឯកសារជា PDF :</strong>
+			<div *ngIf="docs">
+				<ion-grid>
 
-				<ion-col size="5">
-					<div class="ion-margin-start" *ngIf="docs && docs.business_extract">
-						<p>2.<a (click)="dowloadPDF(docs.business_extract, 'business_extract')">សម្រង់ក្រុមហ៊ុន</a></p>
-						<ion-icon (click)="dowloadPDF(docs.business_extract, 'business_extract')"
-							color="primary"
-							class="pdf-icon"
-							name="document-attach">
-						</ion-icon>
-					</div>
-				</ion-col>
-			</ion-row>
-			<ion-row class="ion-margin-top">
-				<ion-col size="7">
-					<div *ngIf="docs && docs.vat_certificate">
-						<p>3.<a (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')">វិញ្ញាបនប័ត្រចុះបញ្ជីពន្ធដារ</a></p>
-						<ion-icon (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
-							color="primary"
-							class="pdf-icon"
-							name="document-attach">
-						</ion-icon>
-					</div>
-				</ion-col>
-
-				<ion-col size="5">
-					<div class="ion-margin-start"  *ngIf="docs && docs.patent">
-						<p>4.<a (click)="dowloadPDF(docs.patent, 'patent')">ប័ណ្ណប៉ាតង់</a></p>
-						<ion-icon (click)="dowloadPDF(docs.patent, 'patent')"
-							color="primary"
-							class="pdf-icon"
-							name="document-attach">
-						</ion-icon>
-					</div>
-				</ion-col>
-				
-				<ion-col size="6">
-					<div *ngIf="docs && docs.gdt_card">
-						<p>5.<a (click)="dowloadPDF(docs.gdt_card, 'gdt_card')">កាតពន្ធដារ</a></p>
-						<ion-icon (click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
-							color="primary"
-							class="pdf-icon"
-							name="document-attach">
-						</ion-icon>
-					</div>
-				</ion-col>
-			</ion-row>
+					<ion-row class="ion-margin-top">
+						<ion-col size="7">
+							<div *ngIf="docs.moc_certificate">
+								<p>1.<a (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')">វិញ្ញាបនប័ត្រចុះបញ្ជីពាណិជ្ជកម្ម</a></p>
+								<ion-icon (click)="dowloadPDF(docs.moc_certificate, 'moc_certificate')"
+									color="primary" 
+									class="pdf-icon" 
+									name="document-attach">
+								</ion-icon>
+							</div>
+						</ion-col>
+		
+						<ion-col size="5">
+							<div class="ion-margin-start" *ngIf="docs.business_extract">
+								<p>2.<a (click)="dowloadPDF(docs.business_extract, 'business_extract')">សម្រង់ក្រុមហ៊ុន</a></p>
+								<ion-icon (click)="dowloadPDF(docs.business_extract, 'business_extract')"
+									color="primary"
+									class="pdf-icon"
+									name="document-attach">
+								</ion-icon>
+							</div>
+						</ion-col>
+					</ion-row>
+					<ion-row class="ion-margin-top">
+						<ion-col size="7">
+							<div *ngIf="docs.vat_certificate">
+								<p>3.<a (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')">វិញ្ញាបនប័ត្រចុះបញ្ជីពន្ធដារ</a></p>
+								<ion-icon (click)="dowloadPDF(docs.vat_certificate, 'vat_certificate')"
+									color="primary"
+									class="pdf-icon"
+									name="document-attach">
+								</ion-icon>
+							</div>
+						</ion-col>
+		
+						<ion-col size="5">
+							<div class="ion-margin-start"  *ngIf="docs.patent">
+								<p>4.<a (click)="dowloadPDF(docs.patent, 'patent')">ប័ណ្ណប៉ាតង់</a></p>
+								<ion-icon (click)="dowloadPDF(docs.patent, 'patent')"
+									color="primary"
+									class="pdf-icon"
+									name="document-attach">
+								</ion-icon>
+							</div>
+						</ion-col>
+						
+						<ion-col size="6">
+							<div *ngIf="docs.gdt_card">
+								<p>5.<a (click)="dowloadPDF(docs.gdt_card, 'gdt_card')">កាតពន្ធដារ</a></p>
+								<ion-icon (click)="dowloadPDF(docs.gdt_card, 'gdt_card')"
+									color="primary"
+									class="pdf-icon"
+									name="document-attach">
+								</ion-icon>
+							</div>
+						</ion-col>
+					</ion-row>
+				</ion-grid>
+			</div>
+			<!-- Other Doc  section-->
+			<div *ngIf="docs && docs.others">
+				<span>
+					ឯកសារផ្សេងៗជា PDF :
+				</span>
+				<ion-grid fixed>
+					<ion-row class="ion-margin-top">
+						<ion-col *ngFor="let doc of docs.others" size="6">
+							<div>
+								<p><a (click)="dowloadPDF(doc.docUrl, doc.title)">{{ doc.titleInKhmer }}</a></p>
+								<ion-icon (click)="dowloadPDF(doc.docUrl, doc.title)"
+									color="primary" 
+									class="pdf-icon" 
+									name="document-attach">
+								</ion-icon>
+							</div>
+						</ion-col>
+					</ion-row>
+				</ion-grid>
+			</div>
         </div>
 	</div>
 </ion-content>
