--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -7,7 +7,7 @@
 /** Ionic CSS Variables **/
 :root {
     --ion-color-primary: #3069bb;
-    --ion-color-primary-contrast: #000000;
+    --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 0, 0, 0;
 
     --ion-color-secondary: #172740;
