tax-calculate page

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -69,7 +69,7 @@
                     <ion-row>
                         <ion-col class="border-r" size="6">
                             <div class="btn-section">
-                                <div class="div-btn text-center">
+                                <div class="div-btn text-center" (click)="goToPageTaxCalculation()">
                                     <div>
                                         <ion-icon color="light" name="calculator"></ion-icon>
                                     </div>
