--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -8,6 +8,14 @@
     }
 }
 
+.phone-icon {
+    margin-right: 5px;
+
+    ion-icon {
+        font-size: 20px;
+    }
+}
+
 ion-content {
     vertical-align: middle;
 
