--- a/src/app/pages/tax-calculation/tax-calculation.page.html
+++ b/src/app/pages/tax-calculation/tax-calculation.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>tax-calculation</ion-title>
+  <ion-toolbar color="primary">
+      <ion-buttons (click)="backHome()" class="ion-padding-horizontal" slot="start">
+          <ion-icon size="large" color="light" name="arrow-back-outline"></ion-icon>
+      </ion-buttons>
+      <ion-title color="light">ការគណនាពន្ធ</ion-title>
   </ion-toolbar>
 </ion-header>
 
